--- a/css/app.css
+++ b/css/app.css
@@ -1,4 +1,5 @@
 :root {
+
     --white: hsl(0, 0%, 100%);
     --light-gray: hsl(212, 45%, 89%);
     --grayish-blue: hsl(220, 15%, 55%);
@@ -6,53 +7,68 @@
 }
 
 html {
-    width: 100%;
+    box-sizing: border-box;
+    font-size: 62.5%;
 }
 
+*, *::before, *::after {
+    box-sizing: inherit;
+}
+
+
 body {
-    font-family: 'Outfit', sans-serif;
-    background-color: var(--light-gray);
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    text-align: center;
+    min-height: 95vh;
+    
+    font-family: 'Outfit', sans-serif;
+    background-color: var(--light-gray);
 }
 
-.main-section {
 
-    width: 25%;
-    margin: auto;
-    padding-bottom: 25px;
-    border-radius: 20px;
+.container{
+    width: 15%;
+    padding: 1.5rem;
+    border-radius: 1rem;
     background-color: var(--white);
-    box-shadow: 15px 11px 136px -46px rgba(0,0,0,0.65);
+}
+
+.container__qr {
+    border-radius: 1rem;
+    width: 100%;
+}
+
+.container__info {
+    margin-top: 2rem;
+    text-align: center;
+}
+
+.container__tittle {
+    font-size: 2rem;
+}
+
+.container__description {
+    font-size: 1.5rem;
+    color: var(--light-gray);
+}
+
+@media (max-width: 1440px) {
+    .container{
+        width: 20%;
+    }
 }
 
 @media (max-width: 768px) {
-    .main-section {
+    .container{
+        width: 40%;
+    }
+}
+
+@media (max-width: 480px) {
+    .container{
         width: 80%;
-    } 
-}
-
-.main-section .qr{
-  margin: 15px;
-}
-.main-section .qr img{
-    width: 100%;
-    border-radius: 20px;
-
-}
-
-.main-section .tittle {
-    text-align: center;
-    font-weight: bold;
-    margin: 10px 50px;
-    font-size: 20px;
-}
-
-.main-section .description {
-    text-align: center;
-    font-size: 15px;
-    color: var(--grayish-blue);
-    margin: auto 50px;
+        padding-bottom: 3rem;
+    }
 }
