--- a/css/app.css
+++ b/css/app.css
@@ -33,6 +33,8 @@ body {
     padding: 1.5rem;
     border-radius: 1rem;
     background-color: var(--white);
+    box-shadow: -1px 3px 45px -4px rgba(0,0,0,0.11);
+
 }
 
 .container__qr {
